--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Photogram</h1>
 <div class="posts-wrapper row">
-  <% @posts.each do |post| %>
-    <%= render 'post', post: post %>
-  <% end %>
+  <div id="posts">
+    <%= render 'posts' %>
+  </div>
+  <div class="text-center" id="paginator">
+    <%= link_to_next_page @posts, 'LOAD MORE', remote: true, id: 'load_more' %>
+  </div>
+
 </div>
